<resources>
    <string name="app_name">MarvelApp</string>
    <string name="image_of_the_comic">Image of the comic</string>
    <string name="image_of_the_series">Image of the series</string>
    <string name="see_all">SEE ALL</string>
    <string name="an_image_for_an_important_character">An image for an important character</string>
    <string name="see_more">See more</string>
    <string name="issue">Issue #%1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="event">Event</string>
    <string name="filter_button">Filter Button</string>
    <string name="comics">Comics</string>
    <string name="characters">Characters</string>
    <string name="series">Series</string>
    <string name="events">Events</string>
    <string name="no_data_found">No Data Found</string>
    <string name="type_here">Type Here</string>
    <string name="favourites">Favourites</string>
    <string name="refresh">Refresh</string>
    <string name="search_in">Search in</string>
    <string name="filter">filter</string>
    <string name="delete">delete</string>
    <string name="recent_search_query">recent search query</string>
    <string name="no_data_available">No Data Available</string>
</resources>