<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.abaferastech.marvelapp.ui.favourites.FavouritesType"/>

        <variable
            name="viewModel"
            type="com.abaferastech.marvelapp.ui.favourites.FavouritesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:layout_marginEnd="@dimen/space_16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.changeFavouriteType(FavouritesType.COMICS)}"
                    android:checked="true"
                    android:text="@string/comics" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.changeFavouriteType(FavouritesType.CHARACTERS)}"
                    android:text="@string/characters" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.changeFavouriteType(FavouritesType.SERIES)}"
                    android:text="@string/series" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.changeFavouriteType(FavouritesType.EVENTS)}"
                    android:text="@string/events" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_favourites"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/space_16dp"
            app:itemsFavourites="@{viewModel.favouriteItems}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>